# websocket

./: .gitignore  welcome.html
SmartSocket_Test/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old  sdkconfig1.old
SmartSocket_Test/.devcontainer/: Dockerfile  devcontainer.json
SmartSocket_Test/main/: CMakeLists.txt  CS5490.c  CS5490.h  Kconfig.projbuild  command_parser.c  command_parser.h  device_management.cpp  device_management.h  diskio_management.c  diskio_management.h  esp_wifi_mesh.c  esp_wifi_mesh.h  keep_alive.h  main.c  smartsocket_nvs_flash.c  smartsocket_nvs_flash.h  soft_ap.c  soft_ap.h  ssd1306.h  ssd1306_i2c_legacy.c  uart_async_rxtxtasks_main.c  web_page.cpp  web_page.h  websocket_server.c  websocket_server.h
SmartSocket_Test/webpage/: landing.html  login.html  welcome.html
SmartSocket_Test/webpage/webapp/: chunk-BSAB7SBC.js  chunk-WWX45PH2.js  index.html  main.js  styles.css
UART_Test/: README.md  sdkconfig  sdkconfig.old
UART_Test/main/: CMakeLists.txt  CS5490.c  CS5490.h  Kconfig.projbuild  command_parser.c  esp_wifi_mesh.c  esp_wifi_mesh.h  keep_alive.h  ssd1306.c  uart_async_rxtxtasks_main.c  web_page.cpp  web_page.h  websocket_server.c  websocket_server.h
